Fix squished login message on IE (make .login_msg display: block)

--- a/www/extra-css/login-schedule.css
+++ b/www/extra-css/login-schedule.css
@@ -9,9 +9,6 @@ body.login #logo {
 	-ms-transition-duration: 0s;
 	max-width: 180px;
 }
-.login_msg {
-	display: inline-block;
-}
 
 #subPane {
 	padding-left:0;
